--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "web3": "1.0.0-beta.36"
+    "web3": "^1.2.1"
   },
   "devDependencies": {
     "@types/web3": "1.0.12",
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "^1.12.3"
   }
 }
